test_files/fails/s_nonstable_in_box.ar
let rec foo = \f ->
    let x = box (f 7) in
    delay (x :: foo f);

console <- 0 :: foo (\x -> x);
